data/derived/sp14/progs/unify/prog4919.ml.out
Characters 197-201:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type (int * 'c list) list list
       Type 'a * 'b is not compatible with type (int * 'c list) list 
